<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_member"
            android:title="@string/menu_member" />
        <item
            android:id="@+id/nav_coupon"
            android:title="@string/menu_coupon" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_question"
            android:title="@string/menu_question" />
        <item
            android:id="@+id/nav_signOut"
            android:title="@string/menu_signOut" />

    </group>
</menu>