<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountForgetPasswordFragment">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forget_id_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_gray_empty"
        android:hint="@string/id_input_hint_title"
        android:inputType="number"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/c_aaaaaa_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_include" />

    <TextView
        android:id="@+id/forget_birthday_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_gray_empty"
        android:gravity="center_vertical"
        android:hint="@string/birthday_input_hint_title"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/c_aaaaaa_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/forget_id_editText"
        app:layout_constraintStart_toStartOf="@+id/forget_id_editText"
        app:layout_constraintTop_toBottomOf="@+id/forget_id_editText" />


    <EditText
        android:id="@+id/new_password_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_gray_empty"
        android:hint="@string/new_password_input_hint_title"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/c_aaaaaa_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/forget_birthday_editText"
        app:layout_constraintStart_toStartOf="@+id/forget_birthday_editText"
        app:layout_constraintTop_toBottomOf="@+id/forget_birthday_editText" />

    <EditText
        android:id="@+id/check_new_password_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_gray_empty"
        android:hint="@string/again_new_password_input_hint_title"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/c_aaaaaa_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/new_password_editText"
        app:layout_constraintStart_toStartOf="@+id/new_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/new_password_editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forget_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_primary"
        android:text="@string/check_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/check_new_password_editText"
        app:layout_constraintStart_toStartOf="@+id/check_new_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/check_new_password_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>